- Fixed bug reopening menu when executing run command on debug cpu and --allow-background-windows setting was disabled
- Fixed text-to-speech on menu (bugs reading text on submenus and windows)
- Fixed left clicking on an icon when menu was open

Fixed cpu+memory leak bug using Linux and Xwindow driver. This is a bug that has always existed (a "long life bug" XD)
Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed TZX autoload as Real Tape on Spectrum +3
Fixed inserting TZX file with invalid header type
Fixed saving .scr screen when located on RAM 7
Fixed esxdos handler call F_GETCWD when root directory (/)
Fixed esxdos handler call F_GETCWD when directory does not exist
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll
Fixed Cassette out sound: allow to hear it on computers: Jupiter Ace, CPC, MSX, Spectravideo
Fixed memory map and behaviour on Jupiter Ace: now it's perfect and better than any other emulator
Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)
Fixed loading .nex snapshots and MMU not managed correctly
Fixed Search menu feature. Now it's enabled by default
Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
Fixed showing footer message F5/Button menu
Fixed MSX keyclick sound
Fixed ZX-Uno write on addresses 0000h-3fffh when using Chloe MMU and segment is not ROM


* As always, there are some other minor bugfixes and improvements

----


ZEsarUX 11.0 - David edition. 06 June 2024

This version is dedicated to my brother David. Rest in peace.

* New things added:

Added loading audio from external audio source, like a tape player. This also includes:
- External Audio Source Window: you may see the audio wave, the signal type, and an azimuth assistant which tells you when you have to use the screwdriver ;)
- Spectrum Analyzer (Audio Spectrum I mean): you may see full frequency range of the audio wave
